[package]
name = "instance_shutdown_startup_schedular"
version = "0.1.0"
authors = ["laurence.chau <laurence.chau@welab.co>"]
autobins = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.2"
serde = { version = "1.0", features = ["derive"] }
rusoto_core = {version = "0.43.0", default_features = false, features=["rustls"]}
rusoto_ec2 = {version = "0.43.0", default_features = false, features=["rustls"]}
serde_json = "^1"
log = "^0.4"
simple_logger = "^1.9"
simple-error = "^0.2"
chrono = "^0.4"
futures = "^0.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"